--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "",
   "private": true,
-  "type": "module",
   "scripts": {
     "remix:dev": "remix dev",
     "remix:build": "remix build",
@@ -41,12 +40,16 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "dotenv-cli": "^7.4.3",
     "drizzle-kit": "~0.28.1",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
